Logo spacing fix

--- a/foia_hub/static/sass/main.scss
+++ b/foia_hub/static/sass/main.scss
@@ -18,6 +18,7 @@ body > header {
     // font-weight: normal;
     // font-size: 2em;
     color: $blue;
+    padding-right: 1em;
     a { color: $blue; }
     strong {font-weight: 800;}
     em { color: #cc2211; font-style: normal;}
